# pmod-pico

./: README.md
CoreBoard/: CoreBoard.xdc  readme.md
CoreBoard/src/: DDR3.ucf  bd_afc3_bd.tcl  create_project.tcl  design_1_bd.tcl
firmware/: CMakeLists.txt  pmodUsb.c  usb_descriptors.c
firmware/pico_stdio_usb/: stdio_usb.c  stdio_usb_descriptors.c
firmware/pico_stdio_usb/include/: tusb_config.h
fpga/: Arty-Master.xdc  busIf.sv  pmodCmd.sv  pmodIf.v  run.sh  tb.sv
fpga/src/: create_project.tcl  design_1_bd.tcl
host/: CMakeLists.txt  pmodUsb.c
